# open-layer

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md
adapters/deepseek/: __init__.py  adapter.py
adapters/groq/: __init__.py  adapter.py
adapters/nvidia/: __init__.py  adapter.py
docs/: ab-report.html  provider-fragmentation.md
scripts/: ab_demo.py  ab_report.py  validate_sdk.py
sdks/python/: pyproject.toml
sdks/python/open_layer/: __init__.py  adapter.py  client.py  types.py
spec/v0.1/: README.md  capabilities.md  errors.md  messages.md  streaming.md  thinking.md  usage.md
spec/v0.1/schema/: capabilities.json  chat-completion-chunk.json  chat-completion-request.json  chat-completion-response.json  error.json  message.json  thinking.json  usage.json
tests/: conftest.py  models.py  providers.toml  pytest.ini  requirements.txt
tests/results/: extra-7-models.txt  model-probe-2026-03-05.txt  sdk-validation-12-models.txt  smoke-5-models.txt
tests/runner/: cli.py
tests/suite/: conftest.py  test_capabilities.py  test_errors.py  test_messages.py  test_streaming.py  test_thinking.py  test_usage.py
tests/suite/helpers/: schema.py  sse.py  throttle.py
