[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-layer"
version = "0.1.0"
description = "Python SDK for the Open Layer unified LLM API spec"
requires-python = ">=3.12"
dependencies = ["httpx"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
